Report delayed timing for web request completion.

--- a/XRayFrontWeb/Views/Home/Responsiveness.cshtml
+++ b/XRayFrontWeb/Views/Home/Responsiveness.cshtml
@@ -2,6 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+	ViewData["Title"] = "Page Responsiveness";
 }
-<h1>Page Responsiveness</h1>
+<h1>@ViewData["Title"]</h1>
 <p>This page took @ViewData["Timing"] to complete.</p>
