--- a/XRayFrontWeb/Views/Shared/_Layout.cshtml
+++ b/XRayFrontWeb/Views/Shared/_Layout.cshtml
@@ -25,7 +25,10 @@
 						 		<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 						 	</li>
 						 	<li class="nav-item">
-								<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Responsiveness">Responsiveness</a>
+						 		<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Responsiveness">Responsiveness</a>
+						 	</li>
+						 	<li class="nav-item">
+						 		<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reliability">Reliability</a>
 						 	</li>
 						 </ul>
                 </div>
