Add controller to return image file from S3 bucket.

--- a/XRayFrontWeb/Views/Shared/_Layout.cshtml
+++ b/XRayFrontWeb/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
 						 	<li class="nav-item">
 						 		<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reliability">Reliability</a>
 						 	</li>
+						 	<li class="nav-item">
+						 		<a class="nav-link text-dark" asp-area="" asp-controller="Aws" asp-action="Index">Image</a>
+						 	</li>
 						 </ul>
                 </div>
             </div>
