Let front-end web tier make request to back-end API tier.

--- a/XRayFrontWeb/Views/Shared/_Layout.cshtml
+++ b/XRayFrontWeb/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
 						 		<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Responsiveness">Responsiveness</a>
 						 	</li>
 						 	<li class="nav-item">
+								<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MultiTierResponsiveness">MultiTierResponsiveness</a>
+						 	</li>
+						 	<li class="nav-item">
 						 		<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reliability">Reliability</a>
 						 	</li>
 						 	<li class="nav-item">
